Add prismjs and its TypeScript definitions to dependencies

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.15.9"
+    "astro": "^5.15.9",
+    "prismjs": "^1.30.0"
+  },
+  "devDependencies": {
+    "@types/prismjs": "^1.26.5"
   }
 }
